# Numerical-Algorithms-for-High-Performance-Computing

./: README.md  axpy.cpp  power.cpp  scalar-product.cpp
spmv_code/: CMakeLists.txt  coordinate_form.c  csc_format.c  csr_extraction_format.c  csr_format.c  ellpack_format.c  jds_format.c  matrix.c  sparse_matrix_mult.c  vector.c
spmv_code/include/: buffer.h  coordinate_form.h  csc_format.h  csr_extraction_format.h  csr_format.h  ellpack_format.h  jds_format.h  matrix.h  vector.h
sycl/: CMakeLists.txt
sycl/databank/: my.mtx  usroads_coord.mtx
sycl/src/: auxiliary.cpp  auxiliary.h  data_types.h  main.cpp  util.cpp  util.h
sycl/src/solvers/: kernels.h  mat_vec_milt_ellpack.cpp  mat_vec_mult_crs.cpp
ump2d/: .clang-format  CMakeLists.txt  Dockerfile  README.md
ump2d/cmake/: FindMETIS.cmake
ump2d/examples/: example.geo  example.vtk
ump2d/src/: DataTypes.h  GraphUtils.cpp  GraphUtils.h  Misc.cpp  Misc.h  main.cpp
ump2d/utils/: README.md  naca-dat2geo.py
